# hermes-studio

./: .gitignore  README.md
.github/actions/build_frontend/: action.yml
.github/workflows/: build_backend.yml  build_frontend.yml  coverage_backend.yml  deploy_docs.yml  deploy_documentation.yml  release.yml  test_backend.yml
backend/: .gitignore  Cargo.toml  Cross.toml
backend/configs/: readme.md
backend/src/: app.rs  main.rs  server.rs
backend/src/animation/: animation.rs  group.rs  groups.rs  mod.rs  posture.rs
backend/src/api/: mod.rs  server.rs
backend/src/api/payloads/: animation.rs  board.rs  mod.rs
backend/src/api/rest/: animations.rs  boards.rs  config.rs  devices.rs  mod.rs  root.rs
backend/src/api/sockets/: ack.rs  animations.rs  boards.rs  config.rs  devices.rs  groups.rs  mod.rs  postures.rs
backend/src/extra/: mod.rs  mp3.rs  raspi.rs
backend/src/hardware/: board.rs  device.rs  led.rs  mod.rs  mp3.rs  servo.rs
backend/src/utils/: cli.rs  config.rs  converter.rs  database.rs  entity.rs  interface.rs  logger.rs  mod.rs  tui.rs
docs/: .gitignore  getting-started.md  index.md  what-is-Hermes-Studio.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/advanced/: configuration.md
docs/userguide/: configuration-panel.md  control-panel.md  index.md  timeline-panel.md
documentation/: getting-started.md  index.md  what-is-HermesStudio.md
documentation/.vitepress/: config.mts
frontend/: .editorconfig  .eslintrc.cjs  .gitignore  env.d.ts  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/animations/: KeyframeEditor.vue  Timeline.vue  TimelineControls.vue  TimelineControls.vue_  TimelineHeader.vue  TimelineHeader.vue_  TimelineTrack.vue  TimelineTrackDevice.vue  TimelineTrackGroup.vue
frontend/src/components/commands/: BooleanAction.vue  GenericAction.vue  Mp3PlayerAction.vue  ServoAction.vue
frontend/src/components/groups/: DraggableGroup.vue  NestedDraggable.vue  NestedDraggableGroup.vue  NestedGroup.vue  NestedNonDraggable.vue_
frontend/src/components/protocols/: Protocol.vue  SerialProtocol.vue  UnknownProtocol.vue
frontend/src/composables/: boardComposables.ts  deviceComposables.ts  emitter.ts  form.ts  formComposables.ts  globalComposables.ts  groupComposables.ts  loader.ts  socket.ts  socketComposables.ts  timelineComposables.ts
frontend/src/layouts/: DefaultLayout.vue
frontend/src/pages/: HomePage.vue  IndexPage.vue  NotFoundPage.vue  SettingsPage.vue
frontend/src/plugins/: i18n.ts  index.ts  pinia.ts  router.ts  vuetify.ts
frontend/src/routes/: animationRoutes.ts  board.ts  boardRoutes.ts  core.ts  coreRoutes.ts  deviceRoutes.ts  index.ts  positionRoutes.ts  postureRoutes.ts
frontend/src/stores/: actuatorStore.ts  animationStore.ts  boardStore.ts  boards.ts  configuration.ts  configurationStore.ts  connection.ts  connectionStore.ts  deviceStore.ts  groupStore.ts  postureStore.ts  toastStore.ts  toasts.ts
frontend/src/translations/: en.json  fr.json
frontend/src/types/: animation.d.ts  animations.d.ts  boards.d.ts  components.d.ts  core.d.ts  devices.d.ts  events.d.ts  groups.d.ts  hardware.d.ts  menus.d.ts  postures.d.ts  socket.d.ts  timeline.d.ts  toast.d.ts
scripts/: build  build-backend  build-frontend  deploy  find-ports  hermes.service  upload-firmware
scripts/firmwares/: firmware_mega.hex  firmware_nano.hex
(+73 files in other folders)
