[package]
name = "hermes-studio"
version = "0.1.0-beta"
edition = "2021"
description = "Hermes-Studio backend API using Hermes-Five."
authors = ["Dominique CLAUSE <contact@acino.fr>"]
repository = "https://github.com/dclause/hermes-studio"
readme = "README.md"
license = "MIT"

[dependencies]
hermes-five = { path = "../../hermes-five/hermes-five" }
anyhow = "1.0.86"
clap = { version = "4.5.11", default-features = false, features = ["derive", "error-context", "help", "suggestions", "usage", "std"] }
#colorful = "0.2.2" @todo restore this once: https://github.com/mellite/colorful/pull/28
colorful = { branch = "main", git = "https://github.com/dclause/colorful" }
log = "0.4.22"
log4rs = { version = "1.3.0", default-features = false, features = ["console_appender", "rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller", "config_parsing"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = "1.39.2"

[profile.release]
opt-level = 3               # All optimizations
lto = true                  # Enable link-time optimization
codegen-units = 1           # Reduce number of codegen units to increase optimizations
panic = 'abort'             # Abort on panic
strip = true                # Strip symbols from binary*
debug = false               # No debug info into release
rpath = false               # Turns off rpath (run-time search path)
debug-assertions = false    # Turn of cfg(debug_assertions)

[profile.release-lto]
inherits = "release"
lto = true
