[package]
name = "hermes-studio"
version = "0.1.0-beta"
edition = "2021"
description = "Hermes-Studio backend API using Hermes-Five."
authors = ["Dominique CLAUSE <contact@acino.fr>"]
repository = "https://github.com/dclause/hermes-studio"
readme = "README.md"
license = "MIT"

[dependencies]
# @todo use published crate
hermes-five = { path = "../../hermes-five/hermes-five", features = ["serde"] }
anyhow = "1.0.86"
axum = { version = "0.7.5", default-features = false, features = ["form", "http1", "json", "matched-path", "original-uri", "query", "tokio"] }
clap = { version = "4.5.11", features = ["derive", "env"] }
chrono = "0.4.38"
colorful = "0.3.2"
figment = { version = "0.10.19", features = ["env", "toml"] }
log = "0.4.22"
log4rs = { version = "1.3.0", default-features = false, features = ["console_appender", "rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller", "config_parsing"] }
parking_lot = "0.12.3"
serde = { version = "1.0.204", features = ["derive"] }
socketioxide = { version = "0.14.0", features = ["state", "extensions"] }
tokio = "1.39.2"
toml = "0.8.19"
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
typetag = "0.2.17"
serde_json = "1.0.121"
dyn-clone = "1.0.17"

[dev-dependencies]
tempfile = "3.11.0"

[profile.release]
opt-level = 3               # All optimizations
lto = true                  # Enable link-time optimization
codegen-units = 1           # Reduce number of codegen units to increase optimizations
panic = 'abort'             # Abort on panic
strip = true                # Strip symbols from binary*
debug = false               # No debug info into release
rpath = false               # Turns off rpath (run-time search path)
debug-assertions = false    # Turn of cfg(debug_assertions)

[profile.release-lto]
inherits = "release"
lto = true
